<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    <LinearLayout
        android:id="@+id/ru_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <TextView
            android:id="@+id/name_ru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ru"
            android:padding="20dp"
            android:layout_weight="2"
            />
        <ImageView
            android:id="@+id/ru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_star_outline_24"
            android:padding="20dp"
            android:layout_weight="1"
            android:layout_gravity="end"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    <LinearLayout
        android:id="@+id/un_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <TextView
            android:id="@+id/name_eng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en"
            android:padding="20dp"
            android:layout_weight="2"
            />
        <ImageView
            android:id="@+id/eng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_star_outline_24"
            android:padding="20dp"
            android:layout_weight="1"
            android:layout_gravity="end"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    <LinearLayout
        android:id="@+id/fr_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <TextView
            android:id="@+id/name_fr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fr"
            android:padding="20dp"
            android:layout_weight="2"
            />
        <ImageView
            android:id="@+id/fr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_star_outline_24"
            android:padding="20dp"
            android:layout_weight="1"
            android:layout_gravity="end"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
</LinearLayout>